--- a/main.html
+++ b/main.html
@@ -7,10 +7,31 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<form action="/submit_application" method="POST">
+	<labe for="name">Name:</labe>
+	<input type="text" id ="name" placeholder="Name"><br><br>
 
+	<label for="phone">Phone Number</label>
+	<input type ="text" placeholder="Phone Number" id ="phone"><br><br>
+
+	<label for="address">Adress</label>
+	<input type="text" placeholder="Adress" id ="address"><br><br>
+
+	<input type="checkbox" id="checkbox" name="gender" value="Have you ever lived with a Dog before?">
+        <label for="checkbox">Have you ever lived with a Dog before?</label><br><br>
+
+	 <label for="multiSelect">Please select your preferred breeds:</label>
+        <select id="multiSelect" name="breeds" multiple required>
+            <option value="Labrador">Labrador</option>
+            <option value="Golden Retriever">Golden Retriever</option>
+            <option value="Bulldog">Bulldog</option>
+            <option value="Beagle">Beagle</option>
+            <option value="Poodle">Poodle</option>
+        </select><br><br>
+
+		<input type="submit" value="Submit">
+	</form>
+	
 </body>
 
 </html>
