--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
             <option value="Poodle">Poodle</option>
         </select><br><br>
 
-		<input type="submit" value="Submit">
+		<input type="submit" value="Submit" id ="submit">
 	</form>
 	
 </body>
