--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 	<label for="phone">Phone Number</label>
 	<input type ="text" placeholder="Phone Number" id ="phone"><br><br>
 
-	<label for="address">Adress</label>
-	<input type="text" placeholder="Adress" id ="address"><br><br>
+	 <label for="address ">Address</label>
+    <textarea id="address" name="address" placeholder="Address" rows="4" type ="text" ></textarea><br>
 
 	<input type="checkbox" id="checkbox" name="gender" value="Have you ever lived with a Dog before?">
         <label for="checkbox">Have you ever lived with a Dog before?</label><br><br>
